@@ -1,5 +1,3 @@
-DIST ibus-hangul-0.1.1.20080901.tar.gz 379501 RMD160 378b268b53e81c53c73b8c458547cd9ac69ebed3 SHA1 d7787aff01eff5696ec98b06d7cb8a32cff4b79f SHA256 23a9f9b2a61e26d427b1350cd7af175d4f2b99271cb56eaf393a6748df9a3744
-EBUILD ibus-hangul-0.1.1.20080901.ebuild 992 RMD160 ac660780a97750bb70de951663fee8bf0d0e24d1 SHA1 417234c4be56988358330893020a726ce577be23 SHA256 1bfd9b6831ad79757601add651311835dab5442486abab2e934f38f668936427
 EBUILD ibus-hangul-9999.ebuild 1154 RMD160 e4ce0a86bc7c26b79b3675ad784faaaf69cc1f9e SHA1 68807b7930144a3be976296ebdd6ff8d5051097f SHA256 55055c7e3833d7757b59616216f3f2f378a5ee66cc0d3905a16d45c407e03639
-MISC ChangeLog 700 RMD160 4dfc2f8abb361eceb5c981511b7c02072b27b1de SHA1 491a30698a5d5e5208125c78e38a83f80099d344 SHA256 16a04ead45faae956b01925612250e957335c063f94beddb94a791251ae97985
+MISC ChangeLog 798 RMD160 c495533dbb59e460bc8233daf6096fb3da3d2828 SHA1 650ca11dfa6a1300a4a8d2cc05b7d592e86f5a61 SHA256 0a6eb0b3ca4568e67bf7372f9360f768361146e730dce02ca11a52b27849abd5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
