@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Sep 2008; Hong Hao <oahong@gmail.com>
+  -ibus-hangul-0.1.1.20080901.ebuild:
+  Drop snapshot
+
   05 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org>
   ibus-hangul-9999.ebuild:
   gettext should be mandatory
